primitives/api/test/tests/ui/type_reference_in_impl_runtime_apis_call.stderr
error[E0053]: method `test` has an incompatible type for trait
  --> tests/ui/type_reference_in_impl_runtime_apis_call.rs:15:17
   |
15 |         fn test(data: &u64) {
   |                       ^^^^
   |                       |
   |                       expected `u64`, found `&u64`
   |                       help: change the parameter type to match the trait: `u64`
   |
note: type in trait
  --> tests/ui/type_reference_in_impl_runtime_apis_call.rs:9:17
   |
9  |         fn test(data: u64);
   |                       ^^^
   = note: expected signature `fn(u64)`
              found signature `fn(&u64)`

error[E0308]: mismatched types
  --> tests/ui/type_reference_in_impl_runtime_apis_call.rs:15:11
   |
13 | / sp_api::impl_runtime_apis! {
14 | |     impl self::Api<Block> for Runtime {
15 | |         fn test(data: &u64) {
   | |                 ^^^^^^^ expected `u64`, found `&u64`
16 | |             unimplemented!()
...  |
27 | |     }
28 | | }
   | |_- arguments to this function are incorrect
   |
note: associated function defined here
  --> tests/ui/type_reference_in_impl_runtime_apis_call.rs:9:6
   |
9  |         fn test(data: u64);
   |            ^^^^
help: consider removing the borrow
   |
15 |         fn test(data: &u64) {
   |
